Storyboard additions to watchOS app.

--- a/Aim! For watchOS/Base.lproj/Interface.storyboard
+++ b/Aim! For watchOS/Base.lproj/Interface.storyboard
@@ -1,17 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11163.2" systemVersion="16A323" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
         <deployment identifier="watchOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11133"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11064"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11077"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--Session Selection Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="Aim__For_watchOS" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="SessionSelectionInterfaceController" customModule="Aim__For_watchOS_Extension">
+                    <items>
+                        <group width="1" alignment="left" layout="vertical" id="zjg-5Q-v9z">
+                            <items>
+                                <label alignment="center" text="Resume" textAlignment="center" id="I8G-Wt-gcV">
+                                    <color key="textColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                </label>
+                                <button width="1" height="40" alignment="center" title="Previous Sessions" id="LMx-T7-ksp">
+                                    <fontDescription key="font" type="system" pointSize="14"/>
+                                </button>
+                            </items>
+                            <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                        </group>
+                        <group width="1" alignment="left" layout="vertical" spacing="2" id="vY2-k3-mJb">
+                            <items>
+                                <label width="0.94999999999999996" alignment="center" text="Select A Duration" textAlignment="center" numberOfLines="0" id="2ef-uG-Xot">
+                                    <color key="textColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" type="system" pointSize="16"/>
+                                </label>
+                                <button width="1" height="27" alignment="center" title="25-Minute" id="fYx-8B-Ags"/>
+                                <button width="1" height="27" alignment="center" title="60-Minute" id="uqi-dD-Cz1"/>
+                                <button width="1" height="27" alignment="center" title="Customize" id="mh3-sn-aWl"/>
+                                <button width="1" height="27" alignment="center" title="Endless!" id="CUR-Yf-uoh"/>
+                            </items>
+                            <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                        </group>
+                    </items>
+                </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="345"/>
+            <point key="canvasLocation" x="220" y="293"/>
         </scene>
         <!--Static Interface-->
         <scene sceneID="AEw-b0-oYE">
