--- a/Aim! For watchOS/Base.lproj/Interface.storyboard
+++ b/Aim! For watchOS/Base.lproj/Interface.storyboard
@@ -1,44 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Kcj-o3-Mv4">
     <dependencies>
         <deployment identifier="watchOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11077"/>
     </dependencies>
     <scenes>
-        <!--Session Selection Interface Controller-->
-        <scene sceneID="aou-V4-d1y">
+        <!--Interface Controller-->
+        <scene sceneID="4hi-jR-Kag">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="SessionSelectionInterfaceController" customModule="Aim__For_watchOS_Extension">
+                <controller id="Kcj-o3-Mv4">
                     <items>
-                        <group width="1" alignment="left" layout="vertical" id="zjg-5Q-v9z">
+                        <group width="0.94999999999999996" height="31" alignment="center" id="uXT-To-DBm">
                             <items>
-                                <label alignment="center" text="Resume" textAlignment="center" id="I8G-Wt-gcV">
+                                <label width="1" height="1" alignment="center" text="Aim!" textAlignment="center" id="bA6-tC-Ylm">
                                     <color key="textColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
                                 </label>
-                                <button width="1" height="40" alignment="center" title="Previous Sessions" id="LMx-T7-ksp">
-                                    <fontDescription key="font" type="system" pointSize="14"/>
-                                </button>
                             </items>
                             <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
                         </group>
-                        <group width="1" alignment="left" layout="vertical" spacing="2" id="vY2-k3-mJb">
+                        <separator alignment="center" id="fHM-rM-zom">
+                            <color key="color" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                        </separator>
+                        <label alignment="center" text="Use Aim! To Boost Your Productivity" textAlignment="center" numberOfLines="0" id="DLW-c8-80L">
+                            <fontDescription key="font" type="system" pointSize="10"/>
+                        </label>
+                        <group width="1" height="44" alignment="center" id="XKG-ub-hko">
                             <items>
-                                <label width="0.94999999999999996" alignment="center" text="Select A Duration" textAlignment="center" numberOfLines="0" id="2ef-uG-Xot">
+                                <button width="0.5" height="1" alignment="left" title="Sessions" id="ZOT-Sz-ZnS">
+                                    <fontDescription key="font" type="system" pointSize="11"/>
+                                    <connections>
+                                        <segue destination="l1H-L2-trl" kind="modal" id="GsZ-08-wS5"/>
+                                    </connections>
+                                </button>
+                                <button width="0.5" height="1" alignment="right" title="Awards" id="tvU-5d-t87">
+                                    <fontDescription key="font" type="system" pointSize="11"/>
+                                    <connections>
+                                        <segue destination="h1y-vm-7uY" kind="modal" id="CAZ-xa-uKW"/>
+                                    </connections>
+                                </button>
+                            </items>
+                            <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="34" y="46"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="TbT-bV-o7I">
+            <objects>
+                <controller id="h1y-vm-7uY">
+                    <items>
+                        <group width="1" alignment="center" id="MVK-Al-b8b">
+                            <items>
+                                <label alignment="center" text="Awards" textAlignment="center" id="XnV-ef-O2Y">
                                     <color key="textColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="font" type="system" pointSize="16"/>
                                 </label>
-                                <button width="1" height="27" alignment="center" title="25-Minute" id="fYx-8B-Ags"/>
-                                <button width="1" height="27" alignment="center" title="60-Minute" id="uqi-dD-Cz1"/>
-                                <button width="1" height="27" alignment="center" title="Customize" id="mh3-sn-aWl"/>
-                                <button width="1" height="27" alignment="center" title="Endless!" id="CUR-Yf-uoh"/>
                             </items>
                             <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
                         </group>
                     </items>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="220" y="293"/>
+            <point key="canvasLocation" x="455" y="-106"/>
+        </scene>
+        <!--Session Selection Interface Controller-->
+        <scene sceneID="Hxe-QF-jGb">
+            <objects>
+                <controller id="l1H-L2-trl" customClass="SessionSelectionInterfaceController" customModule="Aim__Extension">
+                    <items>
+                        <group width="1" alignment="left" layout="vertical" id="Rny-vL-dRZ">
+                            <items>
+                                <label alignment="center" text="Resume" textAlignment="center" id="Fz4-si-rgN">
+                                    <color key="textColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </label>
+                                <button width="1" height="35" alignment="center" title="Previous Sessions" id="DzU-Sh-xTQ">
+                                    <fontDescription key="font" type="system" pointSize="14"/>
+                                </button>
+                            </items>
+                            <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </group>
+                        <group width="1" alignment="left" layout="vertical" spacing="2" id="CIk-e7-mKM">
+                            <items>
+                                <label width="0.94999999999999996" alignment="center" text="Select A Duration" textAlignment="center" numberOfLines="0" id="IB0-4T-qF5">
+                                    <color key="textColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" type="system" pointSize="16"/>
+                                </label>
+                                <button width="1" height="27" alignment="center" title="25-Minute" id="BGQ-LU-ORa"/>
+                                <button width="1" height="27" alignment="center" title="60-Minute" id="nWm-Cd-umE"/>
+                                <button width="1" height="27" alignment="center" title="Customize" id="TbK-X3-UCy"/>
+                                <button width="1" height="27" alignment="center" title="Endless!" id="ppR-ft-1Nw"/>
+                            </items>
+                            <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="priviousSessionButton" destination="DzU-Sh-xTQ" id="yqT-Gw-wc8"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="455" y="222"/>
         </scene>
         <!--Static Interface-->
         <scene sceneID="AEw-b0-oYE">
@@ -54,14 +116,14 @@
                     </connections>
                 </notificationController>
             </objects>
-            <point key="canvasLocation" x="220" y="643"/>
+            <point key="canvasLocation" x="47" y="574"/>
         </scene>
         <!--Dynamic Interface-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller backgroundImage="Insta Like Color" id="4sK-HA-Art" userLabel="Dynamic Interface" customClass="NotificationController" customModule="Aim__For_watchOS" customModuleProvider="target"/>
+                <controller backgroundImage="Insta Like Color" id="4sK-HA-Art" userLabel="Dynamic Interface" customClass="NotificationController" customModule="Aim__" customModuleProvider="target"/>
             </objects>
-            <point key="canvasLocation" x="468" y="643"/>
+            <point key="canvasLocation" x="295" y="574"/>
         </scene>
     </scenes>
 </document>
