--- a/Aim!/Base.lproj/Main.storyboard
+++ b/Aim!/Base.lproj/Main.storyboard
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="O99-vv-05G">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sS4-Vb-GI8">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,7 +27,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EFw-fT-ZKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-815.20000000000005" y="392.65367316341832"/>
+            <point key="canvasLocation" x="124" y="392.65367316341832"/>
         </scene>
         <!--Aim!-->
         <scene sceneID="VOM-VY-OVI">
@@ -49,9 +52,11 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ycB-Di-mPo">
+                                            <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
                                             <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25 Minute-Long Session" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kUo-L8-vby">
+                                            <rect key="frame" x="25" y="15" width="90" height="110.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                             <color key="textColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -120,6 +125,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session in progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eua-8M-Et5">
+                                <rect key="frame" x="113" y="323.5" width="149.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -171,13 +177,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4Ha-JB-WPd">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="44" id="bcf-hS-JVQ">
-                                        <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bcf-hS-JVQ" id="0Kq-mp-2oY">
-                                            <frame key="frameInset" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -258,6 +265,111 @@
             </objects>
             <point key="canvasLocation" x="-1754.4000000000001" y="-261.31934032983509"/>
         </scene>
+        <!--Item 2-->
+        <scene sceneID="c3z-kv-HHS">
+            <objects>
+                <viewController id="AwS-kg-dxE" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Meh-5i-yJf"/>
+                        <viewControllerLayoutGuide type="bottom" id="m3S-Ly-UPb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jjs-h8-5L7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="acg-SC-j3w"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="phX-y2-Mtk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2820" y="1457"/>
+        </scene>
+        <!--Aim!-->
+        <scene sceneID="87u-Ie-oym">
+            <objects>
+                <viewController id="2Il-M1-mDD" customClass="AimSelectionViewController" customModule="Aim_" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3bn-vR-whG"/>
+                        <viewControllerLayoutGuide type="bottom" id="HdZ-PT-VwK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="drg-H2-azF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KYk-Og-uuY">
+                                <rect key="frame" x="72" y="164" width="231" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="231" id="2im-4M-uzB"/>
+                                    <constraint firstAttribute="height" constant="79" id="KsP-go-QCc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="New Session">
+                                    <color key="titleColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="XWn-3g-aC7" kind="show" id="Ck0-HD-JZ0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pgi-NM-jaL">
+                                <rect key="frame" x="72" y="443" width="231" height="79"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Resume">
+                                    <color key="titleColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="pgi-NM-jaL" firstAttribute="width" secondItem="KYk-Og-uuY" secondAttribute="width" id="5kb-tC-umj"/>
+                            <constraint firstItem="pgi-NM-jaL" firstAttribute="centerX" secondItem="KYk-Og-uuY" secondAttribute="centerX" id="ABM-F8-AmT"/>
+                            <constraint firstItem="pgi-NM-jaL" firstAttribute="height" secondItem="KYk-Og-uuY" secondAttribute="height" id="VNM-aJ-6zT"/>
+                            <constraint firstItem="KYk-Og-uuY" firstAttribute="top" secondItem="3bn-vR-whG" secondAttribute="bottom" constant="100" id="YOP-P6-JAF"/>
+                            <constraint firstItem="KYk-Og-uuY" firstAttribute="centerX" secondItem="drg-H2-azF" secondAttribute="centerX" id="ovU-Vy-Qs4"/>
+                            <constraint firstItem="pgi-NM-jaL" firstAttribute="top" secondItem="KYk-Og-uuY" secondAttribute="bottom" constant="200" id="z94-fN-vD4"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Aim!" id="UFV-2C-fXk"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yzY-fJ-PBq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1880.8" y="801.94902548725645"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="k2B-Mu-Jcv">
+            <objects>
+                <viewController id="XWn-3g-aC7" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aw4-hp-hco"/>
+                        <viewControllerLayoutGuide type="bottom" id="r1k-5y-e81"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Mqm-RU-ZWu">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q5G-Wa-kMM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-815" y="1076"/>
+        </scene>
+        <!--Aim Tab Bar View Controller-->
+        <scene sceneID="iqc-6L-y6J">
+            <objects>
+                <tabBarController id="sS4-Vb-GI8" customClass="AimTabBarViewController" customModule="Aim_" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="dvO-7d-qC2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="UvH-t4-RPu" kind="relationship" relationship="viewControllers" id="cM5-yp-WAK"/>
+                        <segue destination="AwS-kg-dxE" kind="relationship" relationship="viewControllers" id="hKP-ts-dhX"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F3z-F6-otM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3745" y="1119"/>
+        </scene>
         <!--Awards-->
         <scene sceneID="bav-LC-fJQ">
             <objects>
@@ -275,7 +387,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kQa-F6-vRu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1754.4000000000001" y="392.65367316341832"/>
+            <point key="canvasLocation" x="-815.20000000000005" y="392.65367316341832"/>
         </scene>
         <!--Aim!-->
         <scene sceneID="OXx-5t-s4c">
@@ -295,6 +407,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vZn-dv-TrA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1754" y="-1604"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="8qz-pt-Kdg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UvH-t4-RPu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 1" id="kA0-Uk-V6h"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YSa-ke-oY5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2Il-M1-mDD" kind="relationship" relationship="rootViewController" id="VKc-g1-Jwj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1mS-N7-Igy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2820" y="801.94902548725645"/>
         </scene>
     </scenes>
     <resources>
