--- a/Aim!/Base.lproj/Main.storyboard
+++ b/Aim!/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5gY-TM-HY8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5gY-TM-HY8">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -58,6 +58,10 @@
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="loginButtonPressed:" destination="5gY-TM-HY8" eventType="touchDown" id="Twe-Me-gIb"/>
+                                    <action selector="loginButtonReleased:" destination="5gY-TM-HY8" eventType="touchUpInside" id="i5D-mv-XRU"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your e-mail address" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Dzc-fh-f0N" customClass="LoginViewControllerTextField" customModule="Aim_" customModuleProvider="target">
                                 <rect key="frame" x="77.5" y="210" width="220" height="45"/>
@@ -93,9 +97,13 @@
                                 <state key="normal" title="Sign Up">
                                     <color key="titleColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="signupButtonPressed:" destination="5gY-TM-HY8" eventType="touchDown" id="1Ix-DE-IBs"/>
+                                    <action selector="signupButtonReleased:" destination="5gY-TM-HY8" eventType="touchUpInside" id="wPj-f7-2ft"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Already a member?" translatesAutoresizingMaskIntoConstraints="NO" id="cTd-wk-spW">
-                                <rect key="frame" x="130" y="501" width="115" height="23"/>
+                                <rect key="frame" x="130" y="505" width="115" height="23"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -114,7 +122,7 @@
                             <constraint firstItem="7hb-zW-brU" firstAttribute="leading" secondItem="Izt-X3-hgt" secondAttribute="leading" id="QRo-Xg-LJ1"/>
                             <constraint firstItem="Vbf-fy-DWE" firstAttribute="width" secondItem="HIa-hQ-AG6" secondAttribute="width" id="SOX-Sr-0bq"/>
                             <constraint firstItem="Vbf-fy-DWE" firstAttribute="height" secondItem="HIa-hQ-AG6" secondAttribute="height" id="V3W-y3-X4v"/>
-                            <constraint firstItem="xkz-2b-O0U" firstAttribute="top" secondItem="cTd-wk-spW" secondAttribute="bottom" constant="-4" id="VeW-IT-fsJ"/>
+                            <constraint firstItem="xkz-2b-O0U" firstAttribute="top" secondItem="cTd-wk-spW" secondAttribute="bottom" constant="-8" id="VeW-IT-fsJ"/>
                             <constraint firstItem="HIa-hQ-AG6" firstAttribute="leading" secondItem="Dzc-fh-f0N" secondAttribute="leading" id="Wku-Om-BVK"/>
                             <constraint firstItem="xkz-2b-O0U" firstAttribute="leading" secondItem="nqk-o4-nNv" secondAttribute="leading" id="Z0V-wB-cEQ"/>
                             <constraint firstItem="Dzc-fh-f0N" firstAttribute="top" secondItem="P6N-b7-TNB" secondAttribute="bottom" constant="75" id="Zx5-FS-uex"/>
